# manage.gwmc.vip

./: .gitignore  Cargo.toml  README.md  env  gwmc.sql
src/: common.rs  constants.rs  filters.rs  main.rs  multipart_form.rs  pager.rs  schema.rs  session.rs  template.rs
src/handlers/: admins_handler.rs  carousel_handler.rs  home_handler.rs  introduction_h.rs  lawsuit_autocar_handler.rs  login_handler.rs  logout_handler.rs  menus_handler.rs  mod.rs  navbar_handler.rs  reptile_handler.rs  rights_handler.rs  role_handler.rs  stock_handler.rs  summernote_h.rs
src/models/: admins_model.rs  carousel_model.rs  lawsuit_autocar_article_model.rs  lawsuit_autocar_model.rs  lawsuit_autocar_photo_model.rs  lawsuit_reptile_model.rs  lawsuit_reptile_photo_model.rs  menus_model.rs  mod.rs  navbar_model.rs  rights_model.rs  roles_model.rs  stock_rise_fall_m.rs
src/routes/: admins_route.rs  carousel_route.rs  home_route.rs  lawsuit_autocar_route.rs  login_route.rs  logout_route.rs  menus_route.rs  mod.rs  navbar_route.rs  reptile_route.rs  rights_route.rs  role_route.rs  site_route.rs  stock_route.rs  upload_route.rs  websockets_route.rs
src/views/: frame_base.html  hint.html  index.html  lawsuit_autocar_edit.html  lawsuit_autocar_list.html  login.html  reptile_detail.html  reptile_list.html  reptile_new.html  summernote.html  upload_demo.html
src/views/admins/: admins_create.html  admins_edit.html  admins_list.html
src/views/carousel/: create.html  edit.html  list.html
src/views/lawsuit/: autocar_edit.html  autocar_list.html
src/views/menus/: menus_create.html  menus_edit.html  menus_list.html
src/views/navbar/: create.html  edit.html  list.html
src/views/reptile/: detail.html  list.html  new.html
src/views/rights/: rights_create.html  rights_edit.html  rights_list.html
src/views/roles/: role_create.html  role_edit.html  role_list.html
src/views/site/: introduction_create.html  introduction_edit.html  introduction_list.html
src/views/stock/: demo.html  rise_fall_create.html  rise_fall_list.html
